add missing key only sampler