@@ -9,6 +9,10 @@
   :jar-exclusions [#"\.java"]
   :javac-options ["-Xlint:unchecked" "-Xlint:-options" "--release" "17"]
   :main datalevin.dtlvnative.Test
+  :jvm-opts ["-XX:+IgnoreUnrecognizedVMOptions"
+             "--enable-native-access=ALL-UNNAMED"
+             "--add-opens=java.base/java.nio=ALL-UNNAMED"
+             "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]
   :deploy-repositories [["clojars" {:url           "https://repo.clojars.org"
                                     :username      :env/clojars_username
                                     :password      :env/clojars_password
